--- a/index.html
+++ b/index.html
@@ -2,8 +2,8 @@
 <html>
 	<title>FHHS RoboRangers</title>
 	<head>
-		<link rel="stylesheet" href="../css/topHeader.css">
-		<link rel="stylesheet" href="../css/bios.css">
+		<link rel="stylesheet" href="css/topHeader.css">
+		<link rel="stylesheet" href="css/bios.css">
 	</head>
 	<body>
 		<div id = "topHeader">
@@ -11,8 +11,8 @@
 			<div id = "enclosureMenu">
 				<div id = "Menubar">
 					<a class="active" href="index.html">Home</a>
-					<a href="about.html">About Us</a>
-					<a href="contact.html">Contact</a>
+					<a href="src/about.html">About Us</a>
+					<a href="src/contact.html">Contact</a>
 				</div>
 			</div>
 
