--- a/src/about.html
+++ b/src/about.html
@@ -2,15 +2,15 @@
 <html>
     <title>FHHS RoboRangers</title>
     <head>
-        <link rel="stylesheet" href="css/topHeader.css">
-        <link rel="stylesheet" href="css/bios.css">
+        <link rel="stylesheet" href="../css/topHeader.css">
+        <link rel="stylesheet" href="../css/bios.css">
     </head>
     <body>
         <div id = "topHeader">
-            <a href="index.html" id = "logo2"><div ></div></a>
+            <a href="../index.html" id = "logo2"><div ></div></a>
             <div id = "enclosureMenu">
                 <div id = "Menubar">
-                    <a href="index.html">Home</a>
+                    <a href="../index.html">Home</a>
                     <a class="active" href="about.html">About Us</a>
                     <a href="contact.html">Contact</a>
                 </div>
