--- a/src/contact.html
+++ b/src/contact.html
@@ -7,10 +7,10 @@
     </head>
     <body>
         <div id = "topHeader">
-            <a href="index.html" id = "logo2"><div></div></a>
+            <a href="../index.html" id = "logo2"><div></div></a>
             <div id = "enclosureMenu">
                 <div id = "Menubar">
-                    <a href="index.html">Home</a>
+                    <a href="../index.html">Home</a>
                     <a href="about.html">About Us</a>
                     <a class="active" href="contact.html">Contact</a>
                 </div>
