Added simpl form

--- a/src/about.html
+++ b/src/about.html
@@ -2,6 +2,7 @@
 <html>
     <title>FHHS RoboRangers</title>
     <head>
+        <link rel="shortcut icon" href="../assets/RRLogo.png">
         <link rel="stylesheet" href="../css/topHeader.css">
         <link rel="stylesheet" href="../css/bios.css">
     </head>
