--- a/src/contact.html
+++ b/src/contact.html
@@ -25,7 +25,7 @@
                 E-mail:*
                 <br><input type="text" name="E-mail"><br><br>
                 Message:* <br><textarea name="message" rows="15" cols="50"></textarea>
-                <input type="submit" value="Submit">
+                <br><input type="submit" value="Submit" id = "formButton">
             </form>
         </div>
     </body>
