Finished form look

--- a/src/contact.html
+++ b/src/contact.html
@@ -18,14 +18,15 @@
                 </div>
             </div>
         </div>
+        <div id="ContactUs">Contact Us</div>
         <div id = "formContainer">
             <form id = "form">
-                Name:*
-                <br><input type="text" name="Name"><br><br>
-                E-mail:*
-                <br><input type="text" name="E-mail"><br><br>
-                Message:* <br><textarea name="message" rows="15" cols="50"></textarea>
-                <br><input type="submit" value="Submit" id = "formButton">
+                <label>Name:*</label>
+                <br><input type="text" name="Name"  placeholder="Name" class = "formProperties"><br><br>
+                <label>E-mail:*</label>
+                <br><input type="text" name="E-mail" placeholder="E-mail" class = "formProperties"><br><br>
+                <label>Message:*</label><br> <textarea name="message" rows="10" cols="50 "placeholder="Your Message"></textarea><br>
+                <input type="submit" value="Submit" id = "formButton">
             </form>
         </div>
     </body>
